Change btn-info, fix side nav z-index issue.

--- a/less/column-layout.less
+++ b/less/column-layout.less
@@ -1,5 +1,4 @@
 
-@column-width: 264px;
 
 .column-layout {
   width: 100%;
@@ -21,10 +20,6 @@
 .column-layout-right {
   right: 0;
   transform: translateX(@column-width);
-}
-.column-layout-left,
-.column-layout-right {
-  z-index: @zindex-mobile-nav;
 }
 .column-layout-left.open,
 .column-layout-right.open {
@@ -62,19 +57,6 @@
     width: auto;
   }
 }
-.column-layout-cover {
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 0;
-  opacity: 0;
-  transition: opacity 0.35s ease;
-  background-color: @brand-navy;
-  cursor: pointer;
-  z-index: @zindex-mobile-nav-background;
-}
 .column-layout-cover.in {
   width: 100%;
   height: 100%;
@@ -103,6 +85,23 @@
   // apply to body to prevent background scrolling
   .column-layout-open {
     overflow: hidden;
+  }
+  .column-layout-cover {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    transition: opacity 0.35s ease;
+    background-color: @brand-navy;
+    cursor: pointer;
+    z-index: @zindex-mobile-nav-background;
+  }
+  .column-layout-left,
+  .column-layout-right {
+    z-index: @zindex-mobile-nav;
   }
 }
 
