--- a/less/variables.less
+++ b/less/variables.less
@@ -334,10 +334,10 @@
 @btn-info-color:                 @brand-grey-plus-10;
 @btn-info-bg:                    transparent;
 @btn-info-border:                @brand-grey-plus-10;
-@btn-info-bg-hover:              @brand-grey-plus-10;
-@btn-info-border-hover:          @brand-grey-plus-10;
-@btn-info-bg-active:             @brand-grey;
-@btn-info-border-active:         @brand-grey;
+@btn-info-bg-hover:              @brand-light-blue;
+@btn-info-border-hover:          @brand-light-blue;
+@btn-info-bg-active:             @brand-light-blue-minus-20;
+@btn-info-border-active:         @brand-light-blue-minus-20;
 
 //=== Button Warning
 //
@@ -1171,3 +1171,6 @@
 
 @sequence-icon-size: 24px;
 @sequence-icon-border: @text-color;
+
+//== Column layout
+@column-width: 264px;
